<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="80dp"
    android:paddingLeft="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelForUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Username:" />

    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:padding="6dp"
        android:background="@drawable/shape" />

    <TextView
        android:id="@+id/labelForPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textSize="16sp"
        android:text="Password:" />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:padding="6dp"
        android:background="@drawable/shape" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:onClick="onClick"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />



</LinearLayout>