<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_root2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

<!--            <Button style="@style/Widget.AppCompat.Button.Colored"-->
<!--                android:id="@+id/saveForm"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/SaveForm" />-->

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickRespond"
                android:text="@string/submit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/proof_of_delivery"
                android:padding="5dp" />

        </LinearLayout>

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pod_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/delivered_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/delivered_by_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/delivery_signature"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="6dp"
                android:background="@drawable/shape"
                android:hint= "@string/sign"
                android:inputType="text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/received_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/received_by_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/receive_signature"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="6dp"
                android:background="@drawable/shape"
                android:hint="@string/sign"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>